--- a/src/style.css
+++ b/src/style.css
@@ -10,19 +10,11 @@ body
     overflow: hidden;
 }
 
-.webgl
-{
-    position: fixed;
-    top: 0;
-    left: 0;
-    outline: none;
-}
-
 .headerNav {
     z-index: 1;
-    position: relative;
+    position: absolute;
+    top: 0; left: 0;
     width: 100%;
-    height: 100%;
     padding-top: 50px;
     box-sizing: border-box;
     display: flex;
@@ -52,11 +44,161 @@ body
     }
 }
 
-.pageContainer {
+main {
     z-index: 1;
+    pointer-events: none;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+.webgl
+{
+    z-index: 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    outline: none;
+}
+
+.pageContainer {
     position: relative;
     width: 100%;
-    padding: 30px;
+    height: 100%;
+    padding: 140px 30px 30px;
     box-sizing: border-box;
     color: white;
+}
+
+#llama-helper {
+    position: absolute;
+    bottom: 30px; left: 30px;
+    display: flex;
+    gap: 20px;
+    align-items: flex-end;
+}
+
+    #llama-helper img {
+        border-radius: 50%;
+        width: 100%;
+    }
+
+    #llama-helper .left-wrapper {
+        width: 150px;
+    }
+
+    #llama-helper .right-wrapper {
+        pointer-events: auto;
+        position: relative;
+        width: 400px;
+        padding: 40px 30px;
+        border-radius: 20px;
+        background-color: rgba(20,20,20, 0.5);
+        backdrop-filter: blur(6px);
+    }
+
+        #llama-helper .text-globe h2 {
+            margin-bottom: 32px;
+        }
+
+        #llama-helper .text-globe button {
+            margin-top: 16px;
+        }
+
+
+
+/* Slides shared classes */
+.allSlidesContainer {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
+    overflow-y: scroll;
+}
+
+.slideContainer {
+    pointer-events: auto;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    border: 1px solid rgba(255,255,255, 0.5);
+    box-sizing: border-box;
+}
+
+.horizontalStackWrapper {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+}
+
+.llama-intro {
+    position: relative;
+    width: 100%;
+    max-width: 800px;
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+}
+    .llama-intro .portrait-wrapper {
+        width: 100px;
+        flex-shrink: 0;
+    }
+
+        .llama-intro .portrait-wrapper img {
+            width: 100%;
+        }
+
+    .llama-intro .text-wrapper {
+        width: 400px;
+        padding: 40px 30px;
+        border-radius: 20px;
+        background-color: rgba(20,20,20, 0.5);
+        backdrop-filter: blur(6px);
+    }
+
+
+.cards-container {
+    position: relative;
+    width: 90%;
+    display: flex;
+    gap: 24px;
+}
+
+    .cards-container .card-wrapper {
+        position: relative;
+        width: 320px;
+        padding: 30px;
+        display: flex;
+        flex-direction: column;
+        gap: 24px;
+        border-radius: 20px;
+        background-color: rgba(200,200,200, 0.5);
+        backdrop-filter: blur(6px);
+    }
+
+
+/* Slide unique styles */
+#slide1 {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    padding-top: 100px;
+}
+
+    #slide1 h1 {
+        font-size: 100px;
+        font-family: sans-serif;
+    }
+
+
+
+    
+
+
+/* Global UI */
+.regular-btn {
+    padding: 6px 10px;
 }
