--- a/src/style.css
+++ b/src/style.css
@@ -9,7 +9,6 @@ body
 {
     overflow: hidden;
 }
-
 .headerNav {
     z-index: 1;
     position: absolute;
@@ -117,7 +116,7 @@ main {
 }
 
 .slideContainer {
-    pointer-events: auto;
+    /* pointer-events: auto; */
     position: relative;
     width: 100%;
     height: 100%;
