--- a/src/style.css
+++ b/src/style.css
@@ -117,7 +117,7 @@ main {
 }
 
 .slideContainer {
-    /* pointer-events: auto; */
+    pointer-events: auto;
     position: relative;
     width: 100%;
     height: 100%;
