--- a/src/juego.css
+++ b/src/juego.css
@@ -42,17 +42,24 @@
     justify-content: space-between;
     flex-direction: column;
 }
+.leftToRightWrapper {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
 
 
 /* Slide unique styles */
-#slide1 {
+#slide0 {
     text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-    #slide1 h1 {
+    #slide0 h1 {
         font-size: 100px;
         font-family: sans-serif;
         margin-top: -150px;
@@ -74,7 +81,11 @@
     }
 
         .llama-intro .portrait-wrapper img {
-            width: 100%;
+            display: block;
+            width: 100px;
+            height: 100px;
+            background-color: rgba(200,200,200, 0.5);
+            border-radius: 50%;
         }
 
     .llama-intro .text-wrapper {
@@ -107,7 +118,11 @@
     }
 
         .llama-instructions .portrait-wrapper img {
-            width: 100%;
+            display: block;
+            width: 100px;
+            height: 100px;
+            background-color: rgba(200,200,200, 0.5);
+            border-radius: 50%;
         }
 
     .llama-instructions .text-wrapper {
@@ -133,22 +148,86 @@
             margin-top: 48px;
         }
 
+.llama-waiting-container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.llama-wait {
+    position: relative;
+    width: 100%;
+    max-width: 800px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
+}
+    .llama-wait .portrait-wrapper {
+        width: 100px;
+        flex-shrink: 0;
+    }
+
+        .llama-wait .portrait-wrapper img {
+            display: block;
+            width: 100px;
+            height: 100px;
+            background-color: rgba(200,200,200, 0.5);
+            border-radius: 50%;
+        }
+
+    .llama-wait .text-wrapper {
+        width: 400px;
+        padding: 40px 30px;
+        border-radius: 20px;
+        text-align: center;
+        background-color: rgba(20,20,20, 0.5);
+        backdrop-filter: blur(6px);
+    }
+
+        .llama-wait .text-wrapper h3 {
+            padding-bottom: 40px;
+        }
+
+
 .cards-container {
     position: relative;
     width: 90%;
     display: flex;
     gap: 24px;
-    filter: none;
+    justify-content: center;
+}
+.cards-container.fullHeight {
+    height: 100%;
 }
 
     .cards-container .card-wrapper {
         position: relative;
         width: 320px;
-        padding: 30px;
+        padding: 30px 30px 90px;
+        box-sizing: border-box;
         display: flex;
         flex-direction: column;
         gap: 24px;
         border-radius: 20px;
         background-color: rgba(200,200,200, 0.5);
         backdrop-filter: blur(6px);
+        overflow: hidden;
     }
+    .cards-container .card-wrapper.fullHeight {
+        height: 100%;
+    }
+
+        .cards-container .card-footer {
+            position: absolute;
+            bottom: 0; left: 0;
+            width: 100%;
+            padding: 15px 30px;
+            box-sizing: border-box;
+            background-color: rgba(20,20,20, 0.5);
+        }
