--- a/src/juego.css
+++ b/src/juego.css
@@ -81,16 +81,31 @@
     gap: 24px;
 }
     .llama-intro .portrait-wrapper {
+        position: relative;
         width: 100px;
+        height: 100px;
         flex-shrink: 0;
     }
 
+        .llama-intro .portrait-wrapper:before {
+            content: '';
+            display: block;
+            position: absolute;
+            margin: auto;
+            bottom: 0;
+            left: 0; right: 0;
+            width: 80px;
+            height: 80px;
+            background-color: rgba(255,255,255, 0.1);
+            border-radius: 50%;
+            backdrop-filter: blur(20px);
+        }
+
         .llama-intro .portrait-wrapper img {
+            position: relative;
             display: block;
             width: 100px;
             height: 100px;
-            background-color: rgba(200,200,200, 0.5);
-            border-radius: 50%;
         }
 
     .llama-intro .text-wrapper {
@@ -116,18 +131,33 @@
     box-sizing: border-box;
 }
     .llama-instructions .portrait-wrapper {
+        position: relative;
         width: 100px;
+        height: 100px;
         flex-shrink: 0;
         display: flex;
         align-items: center;
     }
 
+        .llama-instructions .portrait-wrapper:before {
+            content: '';
+            display: block;
+            position: absolute;
+            margin: auto;
+            bottom: 0;
+            left: 0; right: 0;
+            width: 80px;
+            height: 80px;
+            background-color: rgba(0,0,0, 0.1);
+            border-radius: 50%;
+            backdrop-filter: blur(20px);
+        }
+
         .llama-instructions .portrait-wrapper img {
+            position: relative;
             display: block;
             width: 100px;
             height: 100px;
-            background-color: rgba(200,200,200, 0.5);
-            border-radius: 50%;
         }
 
     .llama-instructions .text-wrapper {
@@ -174,16 +204,31 @@
     gap: 24px;
 }
     .llama-wait .portrait-wrapper {
+        position: relative;
         width: 100px;
+        height: 100px;
         flex-shrink: 0;
     }
 
+        .llama-wait .portrait-wrapper:before {
+            content: '';
+            display: block;
+            position: absolute;
+            margin: auto;
+            bottom: 0;
+            left: 0; right: 0;
+            width: 80px;
+            height: 80px;
+            background-color: rgba(0,0,0, 0.1);
+            border-radius: 50%;
+            backdrop-filter: blur(20px);
+        }
+
         .llama-wait .portrait-wrapper img {
+            position: relative;
             display: block;
             width: 100px;
             height: 100px;
-            background-color: rgba(200,200,200, 0.5);
-            border-radius: 50%;
         }
 
     .llama-wait .text-wrapper {
