--- a/src/style.css
+++ b/src/style.css
@@ -78,15 +78,28 @@ main {
 }
 
     #llama-helper .left-wrapper {
+        position: relative;
         width: 150px;
     }
+        #llama-helper .left-wrapper:before {
+            content: '';
+            display: block;
+            position: absolute;
+            margin: auto;
+            bottom: 0;
+            left: 0; right: 0;
+            width: 125px;
+            height: 125px;
+            background-color: rgba(255,255,255, 0.1);
+            border-radius: 50%;
+            backdrop-filter: blur(20px);
+        }
 
     #llama-helper img {
+        position: relative;
         display: block;
         width: 150px;
         height: 150px;
-        background-color: rgba(200,200,200, 0.5);
-        border-radius: 50%;
     }
 
     #llama-helper .right-wrapper {
