--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,7 @@
 {
     margin: 0;
     padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 html,
@@ -109,7 +110,7 @@ main {
         padding: 30px 20px;
         border-radius: 20px;
         background-color: rgba(20,20,20, 0.5);
-        backdrop-filter: blur(6px);
+        backdrop-filter: blur(20px);
         color: #fff;
         box-sizing: border-box;
     }
