--- a/src/style.css
+++ b/src/style.css
@@ -15,33 +15,31 @@ body
     position: absolute;
     top: 0; left: 0;
     width: 100%;
-    padding-top: 50px;
+    padding: 20px 0;
     box-sizing: border-box;
     display: flex;
     justify-content: space-around;
+    background-color: rgb(113, 39, 182);
+    border: none;
 
     a {
         position: relative;
         font-size: 20px;
         color: white;
+        border-radius: 40px;
         padding: 10px;
         text-decoration: none;
+        justify-content: center;
+        align-items: center;
+        transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
     }
 
-    a:before {
-        content: '';
-        display: block;
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        height: 1px;
+    a:hover {
         background-color: white;
+        color: rgb(113, 39, 182);
     }
 
-    a:hover:before {
-        opacity: 0;
-    }
+   
 }
 
 main {
