--- a/src/style.css
+++ b/src/style.css
@@ -15,7 +15,6 @@ body
     position: absolute;
     top: 0; left: 0;
     width: 100%;
-    padding: 20px 0;
     box-sizing: border-box;
     display: flex;
     justify-content: space-around;
@@ -23,11 +22,12 @@ body
     border: none;
 
     a {
+        width: 100%;
+        text-align: center;
         position: relative;
         font-size: 20px;
         color: white;
-        border-radius: 40px;
-        padding: 10px;
+        padding: 20px;
         text-decoration: none;
         justify-content: center;
         align-items: center;
