temporary fix for button disappearing pt 2

--- a/static/juego.css
+++ b/static/juego.css
@@ -4,9 +4,9 @@
     box-sizing: border-box;
 }
 
-article#juegoContainer.pageContainer {
+/* article#juegoContainer.pageContainer {
     padding: 90px 0;
-}
+} */
 
 /* Slides shared classes */
 .allSlidesContainer {
