--- a/src/juego.css
+++ b/src/juego.css
@@ -559,6 +559,65 @@ div.theme-input-group {
         .range {
             width: 90%;
         }
+        /*********** Baseline, reset styles ***********/
+        .range {
+            -webkit-appearance: none;
+            appearance: none;
+            background: transparent;
+            cursor: ew-resize;
+            width: 25rem;
+        }
+        
+        /* Removes default focus */
+        .range:focus {
+            outline: none;
+        }
+        
+        /******** Chrome, Safari, Opera and Edge Chromium styles ********/
+        /* slider track */
+        .range::-webkit-slider-runnable-track {
+            background-color: rgba(0,0,0, 0.25);
+            border-radius: 0.5rem;
+            height: 0.5rem;
+        }
+        
+        /* slider thumb */
+        .range::-webkit-slider-thumb {
+            -webkit-appearance: none; /* Override default look */
+            appearance: none;
+            margin-top: -4px; /* Centers thumb on the track */
+            background-color: rgba(255,255,255, 0.5);
+            border-radius: 0.5rem;
+            height: 1rem;
+            width: 1rem;
+        }
+        
+        .range:focus::-webkit-slider-thumb {
+            outline: 3px solid rgba(255,255,255, 0.5);
+            outline-offset: 0.125rem;
+        }
+        
+        /*********** Firefox styles ***********/
+        /* slider track */
+        .range::-moz-range-track {
+            background-color: rgba(0,0,0, 0.25);
+            border-radius: 0.5rem;
+            height: 0.5rem;
+        }
+        
+        /* slider thumb */
+        .range::-moz-range-thumb {
+            background-color: rgba(255,255,255, 0.5);
+            border: none; /*Removes extra border that FF applies*/
+            border-radius: 0.5rem;
+            height: 1rem;
+            width: 1rem;
+        }
+        
+        .range:focus::-moz-range-thumb{
+            outline: 3px solid rgba(255,255,255, 0.5);
+            outline-offset: 0.125rem;
+        }
         .input-number {
             font-weight: 700;
             text-align: center;
