--- a/src/juego.css
+++ b/src/juego.css
@@ -586,7 +586,7 @@ div.theme-input-group {
             -webkit-appearance: none; /* Override default look */
             appearance: none;
             margin-top: -4px; /* Centers thumb on the track */
-            background-color: rgba(255,255,255, 0.5);
+            background-color: #fff;
             border-radius: 0.5rem;
             height: 1rem;
             width: 1rem;
@@ -607,7 +607,7 @@ div.theme-input-group {
         
         /* slider thumb */
         .range::-moz-range-thumb {
-            background-color: rgba(255,255,255, 0.5);
+            background-color: #fff;
             border: none; /*Removes extra border that FF applies*/
             border-radius: 0.5rem;
             height: 1rem;
