--- a/src/css/base.css
+++ b/src/css/base.css
@@ -8,82 +8,170 @@ V 2.0
 *::before {
   box-sizing: border-box;
 }
-html { line-height: 1.15; -ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%; }
-dl dl, dl ol, dl ul, ol dl, ol ol, ol ul, ul dl, ul ol, ul ul { margin-block-start: 0; margin-block-end: 0; }
-hr { box-sizing: content-box; height: 0; overflow: visible; }
-main { display: block; }
-a { background-color: transparent; }
-b, strong {font-weight: bolder; }
-video { display: inline-block; }
-img { border-style: none; }
-svg:not(:root) { overflow: hidden; }
-button, input, select { margin: 0; }
-button { overflow: visible; text-transform: none; }
-button, [type="button"], [type="reset"], [type="submit"] { -webkit-appearance: button; }
-[hidden] { display: none; }
-h1 { font-size: 2em; margin: 0.67em 0; }
-article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section { display: block; }
-ol, ul { list-style: none; }
-blockquote, q { quotes: none; }
-blockquote:before, blockquote:after, q:before, q:after { content: ''; content: none; }
-table { border-collapse: collapse; border-spacing: 0; }
-* {margin: 0; padding: 0; box-sizing: border-box; }
-* a {cursor: pointer; text-decoration: none; }
-* i {font-style: italic; }
-* p { font-size: 1em;}
+html {
+  line-height: 1.15;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+}
+dl dl,
+dl ol,
+dl ul,
+ol dl,
+ol ol,
+ol ul,
+ul dl,
+ul ol,
+ul ul {
+  margin-block-start: 0;
+  margin-block-end: 0;
+}
+hr {
+  box-sizing: content-box;
+  height: 0;
+  overflow: visible;
+}
+main {
+  display: block;
+}
+a {
+  background-color: transparent;
+}
+b,
+strong {
+  font-weight: bolder;
+}
+video {
+  display: inline-block;
+}
+img {
+  border-style: none;
+}
+svg:not(:root) {
+  overflow: hidden;
+}
+button,
+input,
+select {
+  margin: 0;
+}
+button {
+  overflow: visible;
+  text-transform: none;
+}
+button,
+[type="button"],
+[type="reset"],
+[type="submit"] {
+  -webkit-appearance: button;
+}
+[hidden] {
+  display: none;
+}
+h1 {
+  font-size: 2em;
+  margin: 0.67em 0;
+}
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+ol,
+ul {
+  list-style: none;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+* a {
+  cursor: pointer;
+  text-decoration: none;
+}
+* i {
+  font-style: italic;
+}
+* p {
+  font-size: 1em;
+}
 
 @font-face {
-  font-family: 'Helvetica Neue';
-  src:  url('/fonts/HelveticaNeue-Roman.eot');
-  src:  url('/fonts/HelveticaNeue-Roman.eot?#iefix') format('embedded-opentype'),
-        url('/fonts/HelveticaNeue-Roman.woff2') format('woff2'),
-        url('/fonts/HelveticaNeue-Roman.woff') format('woff'),
-        url('/fonts/HelveticaNeue-Roman.ttf') format('truetype');
+  font-family: "Helvetica Neue";
+  src: url("/fonts/HelveticaNeue-Roman.eot");
+  src:
+    url("/fonts/HelveticaNeue-Roman.eot?#iefix") format("embedded-opentype"),
+    url("/fonts/HelveticaNeue-Roman.woff2") format("woff2"),
+    url("/fonts/HelveticaNeue-Roman.woff") format("woff"),
+    url("/fonts/HelveticaNeue-Roman.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Helvetica NB';
-  src:  url('/fonts/HelveticaNeue-Bold.eot');
-  src:  url('/fonts/HelveticaNeue-Bold.eot?#iefix') format('embedded-opentype'),
-        url('/fonts/HelveticaNeue-Bold.woff2') format('woff2'),
-        url('/fonts/HelveticaNeue-Bold.woff') format('woff'),
-        url('/fonts/HelveticaNeue-Bold.ttf') format('truetype');
+  font-family: "Helvetica NB";
+  src: url("/fonts/HelveticaNeue-Bold.eot");
+  src:
+    url("/fonts/HelveticaNeue-Bold.eot?#iefix") format("embedded-opentype"),
+    url("/fonts/HelveticaNeue-Bold.woff2") format("woff2"),
+    url("/fonts/HelveticaNeue-Bold.woff") format("woff"),
+    url("/fonts/HelveticaNeue-Bold.ttf") format("truetype");
   font-weight: bold;
   font-style: normal;
   font-display: swap;
 }
 
 :root {
-  font-family: 'Helvetica Neue', sans-serif;
+  font-family: "Helvetica Neue", sans-serif;
   font-size: 16px;
-  --font-titles:'Helvetica NB', sans-serif ; 
+  --font-titles: "Helvetica NB", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   --color-bg: #f4f3ce;
   --color-bg-card: rgba(255, 255, 255);
   --color-text: #272723;
-  --color-text-w: #F5F5F5;
-
-
-
+  --color-text-w: #f5f5f5;
 }
 
-a{ color:var( --color-text);}
+a {
+  color: var(--color-text);
+}
 
 body {
   margin: 0;
   color: var(--color-text);
   background-color: var(--color-bg);
   background-image: url(../img/noise.png);
-  background-size: 400px, 100% 100vh;
+  background-size:
+    400px,
+    100% 100vh;
   background-attachment: fixed;
   overflow-x: hidden;
 }
-
-
 
 /* Loader */
 .loader {
@@ -95,7 +183,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #000; 
+  background-color: #000;
   color: #fff;
   font-size: 2em;
   z-index: 100;
@@ -106,7 +194,7 @@ body {
 }
 
 /* General */
-main{
+main {
   position: relative;
   top: 90px;
 }
@@ -131,26 +219,26 @@ main{
 }
 
 .colorLayer::after {
-  content: '';
+  content: "";
   pointer-events: none;
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #ffd178; 
+  background-color: #ffd178;
   mix-blend-mode: multiply;
 }
 
 .colorLayer2::after {
-  content: '';
+  content: "";
   pointer-events: none;
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #6600ff; 
+  background-color: #6600ff;
   mix-blend-mode: color;
 }
 
@@ -169,13 +257,12 @@ main{
   transform: translate(-50%, -50%);
   width: 100vw;
   height: 100vh;
-  object-fit: cover;  
+  object-fit: cover;
 }
-
 
 .home__title {
   position: absolute;
-  bottom: 20%; 
+  bottom: 20%;
   left: 50%;
   transform: translateX(-50%);
   text-align: center;
@@ -184,19 +271,19 @@ main{
 }
 
 .home__title p {
-  font-family: 'Helvetica NB';
-  font-size: clamp(2.55rem, 4.25vw, 5.1rem); 
+  font-family: "Helvetica NB";
+  font-size: clamp(2.55rem, 4.25vw, 5.1rem);
   margin: 0;
   text-transform: uppercase;
 }
 
 .home__title img {
-  width: clamp(255px, 34vw, 510px); 
-  margin-top: 0.15rem; 
+  width: clamp(255px, 34vw, 510px);
+  margin-top: 0.15rem;
 }
 
 .home__title::after {
-  content: '\00BB';
+  content: "\00BB";
   position: absolute;
   top: 100%;
   left: 0%;
@@ -212,7 +299,7 @@ main{
   display: grid;
   grid-template-columns: 100%;
   grid-template-rows: 20vh 20vh auto;
-  grid-template-areas: 'intro-title';
+  grid-template-areas: "intro-title";
   place-items: center;
   padding: 0 var(--page-padding);
 }
@@ -234,14 +321,14 @@ main{
 }
 
 .intro__title span {
-  font-size: inherit; 
+  font-size: inherit;
 }
 
 .intro__title img {
   width: auto;
-  height: 0.85em; 
+  height: 0.85em;
   display: inline-block;
-  vertical-align: middle; 
+  vertical-align: middle;
   margin-top: -20px;
 }
 
@@ -252,7 +339,7 @@ main{
   grid-area: intro-title;
   grid-row: 1 / span 3;
   display: grid;
-  grid-template-columns: repeat(3,auto);
+  grid-template-columns: repeat(3, auto);
   justify-content: center;
   gap: 3rem;
 }
@@ -270,13 +357,12 @@ main{
   align-items: stretch;
   outline: 1px solid var(--color-card);
   background: var(--color-bg-card);
-  grid-template-areas: 'card-img card-img';
+  grid-template-areas: "card-img card-img";
 }
 
 .grid .card {
-   box-shadow: 0 2px 7px 0 rgba(0,0,0,0.8);
+  box-shadow: 0 2px 7px 0 rgba(0, 0, 0, 0.8);
 }
-
 
 .card__img {
   grid-area: card-img;
@@ -298,8 +384,8 @@ main{
   text-align: center;
 }
 
-.section-text p b{
-  font-family: 'Helvetica NB', sans-serif;
+.section-text p b {
+  font-family: "Helvetica NB", sans-serif;
 }
 
 /* How */
@@ -311,20 +397,18 @@ main{
   text-transform: uppercase;
 }
 
-
 .logos {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 25px; 
+  margin-top: 25px;
 }
 
-
 .logo {
-  max-width: 200px; 
+  max-width: 200px;
   width: 100%;
   height: auto;
-  margin: 0; 
+  margin: 0;
 }
 
 .howAnchor {
@@ -351,7 +435,7 @@ main{
 }
 
 .gallery img::after {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
@@ -380,7 +464,9 @@ main{
   z-index: 9999;
   opacity: 0;
   visibility: hidden;
-  transition: opacity 0.3s ease, visibility 0.3s ease;
+  transition:
+    opacity 0.3s ease,
+    visibility 0.3s ease;
 }
 
 #fullscreenOverlay img {
@@ -409,7 +495,7 @@ main{
   position: relative;
   transform-style: preserve-3d;
   display: grid;
-  grid-template-areas: 'card';
+  grid-template-areas: "card";
   grid-template-columns: 100%;
   place-items: center;
 }
@@ -419,7 +505,7 @@ main{
   background: rgba(255, 255, 255, 1);
 }
 
-.footer{
+.footer {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -429,11 +515,11 @@ main{
   height: 100vh;
 }
 
-.footer img{
+.footer img {
   width: 100px;
 }
 
-.footer p a { 
+.footer p a {
   font-weight: bold;
 }
 
@@ -463,12 +549,13 @@ main{
     grid-template-columns: repeat(3, 1fr);
   }
   .logo {
-    max-width: 300px; 
+    max-width: 300px;
   }
 }
 
-
 /* Animaciones */
 @keyframes pulse {
-  to { top: 120%; }
+  to {
+    top: 120%;
+  }
 }
